[project]
version = "1.8.5"
dependencies = [
    "cachetools",
    "pyjwt[crypto]!=2.6.0",
    "qrcode",
    "requests",
    "requests-futures",
    "tornado",
    "urllib3>=2.0.4",
    "wipac-dev-tools",
]


[project.optional-dependencies]
openapi = [
    "openapi-core",
]
telemetry = [
    "wipac-telemetry >= 0.2.4",
]
mypy = [
    "httpretty",
    "pycycle",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
    "types-requests",
    "openapi-core",
    "wipac-telemetry >= 0.2.4",
    "httpretty",
    "pycycle",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
    "types-requests",
]
