[wipac:cicd_setup_builder]
pypi_name = wipac-rest-tools
python_min = 3.6
author = WIPAC Developers
author_email = developers@icecube.wisc.edu
keywords_spaced = python REST tools utilities OpenTelemetry tracing telemetry

[options]
install_requires =
    pyjwt
    requests
    requests-futures
    tornado
    wipac-dev-tools

[options.extras_require]
telemetry =
    wipac-telemetry

[flake8]
ignore = E226,E231,E501

[tool:pytest]
flake8-ignore = E501 E231 E226
